Laboratorio 4/IEMOIS/src/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\BlueJ\lib\bluejcore.jar;D:\BlueJ\lib\junit-4.11.jar;D:\BlueJ\lib\hamcrest-core-1.3.jar;D:\BlueJ\lib\lang-stride.jar;D:\BlueJ\lib\javafx\lib\javafx.base.jar;D:\BlueJ\lib\javafx\lib\javafx.controls.jar;D:\BlueJ\lib\javafx\lib\javafx.fxml.jar;D:\BlueJ\lib\javafx\lib\javafx.graphics.jar;D:\BlueJ\lib\javafx\lib\javafx.media.jar;D:\BlueJ\lib\javafx\lib\javafx.properties.jar;D:\BlueJ\lib\javafx\lib\javafx.swing.jar;D:\BlueJ\lib\javafx\lib\javafx.web.jar;D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\IEMOIS\src
-d
D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\IEMOIS\src\doc
-encoding
UTF-8
-charset
UTF-8
D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\IEMOIS\src\Aplicacion\Iemois.java
<---- end of javadoc command ---->
Loading source file D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\IEMOIS\src\Aplicacion\Iemois.java...
D:\Documents\_Universidad\POOB 2020-2\Laboratorio 4\IEMOIS\src\Aplicacion\Iemois.java:74: error: illegal start of expression
    public void adicione(Mooc informacion){
    ^
1 error
